# BLE_Peripheral_Pi5

./: .gitignore  CMakeLists.txt  README.md  ble_service.py  build.sh  main.py  requirements.txt
config/: advertising_config.py  bluetooth_exceptions.py  data_utils.py
include/: BLEAdvertisement.h  BLECharacteristic.h  BLEPeripheral.h  BLEService.h
src/: BLEAdvertisement.cpp  BLECharacteristic.cpp  BLEPeripheral.cpp  BLEService.cpp  ble_advertisement.py  ble_auto_confirm.py  ble_gatt.py  ble_manager.py  gatt_manager.py  main.cpp  main.py
